--- a/Fxfile.yaml
+++ b/Fxfile.yaml
@@ -37,7 +37,7 @@ environments:
       - name: Default
         authType: BASIC
         username: admin@fxlabs.io
-        password: '{{@Vault.FxLabs/DevMachinePassword}}'
+        password: apple123
 # Job profiles
 jobs:
   - name: Stg
