--- a/Fxfile.yaml
+++ b/Fxfile.yaml
@@ -29,7 +29,7 @@ environments:
       - name: Default
         authType: BASIC
         username: admin@fxlabs.io
-        password: apple123
+        password:  '{{@Vault.FxLabs/DevMachinePassword}}'
   - name: Dev
     baseUrl: http://localhost:8080/api/v1
     # app access credentials
