--- a/test-suites/projects/project_create_invalid.yaml
+++ b/test-suites/projects/project_create_invalid.yaml
@@ -26,7 +26,7 @@ testCases:
   # invalid name
   - id: 1
     body: '{
-        "name": "test",
+        "name": "",
         "description": "SD-Test example"
      }'
      # invalid org_id
