--- a/Fxfile.yaml
+++ b/Fxfile.yaml
@@ -50,6 +50,8 @@ jobs:
     environment: Local
     tags:
       - V1
+    notifications:
+      - FxLabs/Slack
     regions: FxLabs/US_WEST_1
     issueTracker: FxLabs/Github-Bot
   - name: SANDBOX
